--- a/src/components/project-cover/project-cover.styles.scss
+++ b/src/components/project-cover/project-cover.styles.scss
@@ -42,12 +42,13 @@
     .cover-image {
       width: 100%;
       height: 100%;
+      border-radius: 20px 20px 0 0;
       background-size: cover;
       background-position: center;
     }
 
     @media screen and (max-width: 480px) {
-      height: 0px;
+      display: none;
     }
   }
 }
