--- a/src/components/sections/fun-projects/fun-projects.styles.scss
+++ b/src/components/sections/fun-projects/fun-projects.styles.scss
@@ -15,15 +15,22 @@
     justify-content: space-evenly;
 
     .fun-project-tile {
+      width: 325px;
       display: flex;
       flex-direction: column;
       align-items: center;
       border: 1px solid $cardBorder;
       border-radius: 20px;
       margin: 20px 10px;
+      position: relative;
+      overflow: hidden;
+
+      // To fix cover image corner overflow in Safari
+      mask-image: linear-gradient(white, black);
 
       &:hover {
         & .cover-image {
+          border-radius: 20px 20px 0 0;
           transform: scale(1.1);
           transition: transform 1.5s cubic-bezier(0.25, 0.45, 0.45, 0.95);
         }
@@ -31,7 +38,11 @@
     }
 
     @media screen and (max-width: 480px) {
-      width: 100%;
+      width: 285px;
+    }
+
+    @media screen and (max-width: 320px) {
+      width: 200px;
     }
   }
 }
